fixed gap above header and added margins to content display

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,9 +39,13 @@ h1 {
   margin: 20px 0px;
 }
 
+.contentContainer {
+  margin: 0px 10px;
+}
+
 .signin {
   height: 25vh;
-  margin-top: 25vh;
+  margin-top: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
